--- a/index.css
+++ b/index.css
@@ -19,10 +19,11 @@ h1 {
     margin: 10px;
 }
 
-h1.logo {
+.logo {
     float: left;
-    margin: 0;
-    font-size: 1.65em;
+    margin: 5px;
+    /* font-size: 1.65em; */
+    width: 100px;
 }
 
 
