--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     line-height: 1.6;
-    min-height: 100vh;
+    min-height: 200vh;
     background-color: #3bb7ff;
 }
 
@@ -37,6 +37,9 @@ a.nav-item:hover {
 
 
 .header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
     box-sizing: border-box;
 	padding-top: .5em;
 	padding-bottom: .5em;
