--- a/index.css
+++ b/index.css
@@ -110,8 +110,8 @@ a.welcome-text {
 .btns{
     float: right;
     position: absolute;
-    top: -10px;
-    right: 0;
+    top: 0px;
+    right: 10px;
     font-size: 28px;
     margin: 20px;
     color: grey;
